[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/MenuTab/Menu_UI.gd" type="Script" id=1]
[ext_resource path="res://Resource/Minecraft.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/MenuTab/Menu UI.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
resource_name = "Close"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -62, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Open"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -62, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -63, 0 ) ]
}

[node name="MenuTab" type="Node2D"]
position = Vector2( -63, 0 )
z_index = 1
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 99.0
margin_bottom = 180.0
mouse_filter = 2
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
margin_left = 0.364738
margin_top = 18.0
margin_right = 62.3647
margin_bottom = 170.0

[node name="Serve" type="Button" parent="TextureRect/VBoxContainer"]
margin_right = 62.0
margin_bottom = 22.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "          "
flat = true

[node name="EraseIngredient" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 26.0
margin_right = 62.0
margin_bottom = 48.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "          "
flat = true

[node name="Help" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 52.0
margin_right = 62.0
margin_bottom = 74.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "          "
flat = true

[node name="EmptyCauldron" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 78.0
margin_right = 62.0
margin_bottom = 100.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "          "
flat = true

[node name="ChangePotion" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 104.0
margin_right = 62.0
margin_bottom = 126.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
text = "          "
flat = true

[node name="Button" type="Button" parent="TextureRect"]
margin_left = 58.3647
margin_top = 7.0
margin_right = 70.3647
margin_bottom = 27.0
focus_mode = 0
toggle_mode = true
flat = true
align = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Close = SubResource( 4 )
anims/Open = SubResource( 2 )
anims/RESET = SubResource( 3 )

[connection signal="pressed" from="TextureRect/VBoxContainer/Serve" to="." method="_on_Serve_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/EraseIngredient" to="." method="_on_EraseIngredient_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/EmptyCauldron" to="." method="_on_EmptyCauldron_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/ChangePotion" to="." method="_on_ChangePotion_pressed"]
[connection signal="toggled" from="TextureRect/Button" to="." method="_on_Button_toggled"]
